# RoverControl

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  SoteriaRover.cpp  SoteriaRover.xml  example_add_file.txt  exmample.c  git_example.c  rvLocal.c  rvLocom.c  rvLocom.h  rvMain  rvMain.c
Comms/: CommsModule.h
Manager/: ManagerModule.cpp
RoverControl/: .cproject  .project  CMakeLists.txt  SoteriaRover.cpp  mavlinkGen.sh  old.cpp
RoverControl/Comms/: CommsModule.cpp  CommsModule.h  Makefile
RoverControl/Inert/: InertModule.cpp  Makefile
RoverControl/Manager/: ManagerModule.cpp  ManagerModule.h  ManagerTest.cpp
RoverControl/Motor/: MotorModule.cpp
RoverControl/Sonar/: SonarModule.cpp  SonarTest.cpp  gpioLevelTest.cpp
RoverControl/Telec/: TelecInterfaceStructs.h  TelecModule.cpp  TelecModule.h  TelecTest.cpp
RoverControl/include/: CommsInterfaceStructs.h  CommsModule.h  InertModule.h  ManagerModule.h  MotorModule.h  SonarModule.h  TelecInterfaceStructs.h  TelecModule.h  TelemInterfaceStructs.h  TelemModule.h
RoverControl/include/mavlink/SoteriaRover/: SoteriaRover.h  mavlink_msg_camera_command.hpp  mavlink_msg_heartbeat.h  mavlink_msg_inert_command.hpp  mavlink_msg_motor_command.hpp  mavlink_msg_motor_report.h  testsuite.h  version.h
RoverControl/mavlink/: mavlink_helpers.h  protocol.h
RoverControl/mavlink/SoteriaRover/: SoteriaRover.h  mavlink.h  mavlink_msg_heartbeat.h  mavlink_msg_inert_command.h  testsuite.h  version.h
RoverControl/src/: CommsModule.cpp  Copy of TelecModule.cpp  I2Cdev.cpp  InertModule.cpp  ManagerModule.cpp  MotorModule.cpp  SonarModule.cpp  SoteriaRover.cpp  TelecModule.cpp  TelemModule.cpp  Utils.cpp
RoverGS/: .project  GroundStation.py  RoverGS.py  client.py  mavlink.py  mavlinkGen.sh  mySocket.py  server.py
Sonar/: Makefile
Telec/: TelecModule.h
eclipse/: .cproject  .gitignore  .project  README.md  example.c  rvCom.c  rvI2C.h  rvIMU.h  rvLocom.c  rvLocom.h
eclipsec++/: .project  CMakeLists.txt  CommsContainer.cpp  CommsContainer.h  CommsModule.cpp  CommsModule.h  Locom.cpp  Locom.h  LocomClass.cpp  LocomClass.h  (+24 more)
(+138 files in other folders)
